--- a/index.html
+++ b/index.html
@@ -423,12 +423,8 @@
             <h2>My Content</h2>
             <div class="content-grid">
                 <div class="content-card">
-                    <h3>🎮 Gameplay Videos</h3>
+                    <h3>🎮 Videos</h3>
                     <p>Epic Gorilla Tag matches, competitive gameplay, and incredible stunts that will leave you amazed. Watch me dominate the jungle!</p>
-                </div>
-                <div class="content-card">
-                    <h3>📚 Tutorials & Tips</h3>
-                    <p>Learn the best techniques, movement strategies, and pro tips to elevate your Gorilla Tag skills to the next level.</p>
                 </div>
                 <div class="content-card">
                     <h3>🏆 Challenges</h3>
@@ -448,11 +444,11 @@
             <h2>Channel Statistics</h2>
             <div class="stats-grid">
                 <div class="stat-item">
-                    <div class="stat-number">25K+</div>
+                    <div class="stat-number">85K+</div>
                     <div class="stat-label">Subscribers</div>
                 </div>
                 <div class="stat-item">
-                    <div class="stat-number">500+</div>
+                    <div class="stat-number">300+</div>
                     <div class="stat-label">Videos</div>
                 </div>
                 <div class="stat-item">
